# SLRParser

./: CMakeLists.txt  README.md  main.cpp
include/: LexicalAnalysis.hpp  SyntaxAnalysis.hpp  grammar.hpp  status.hpp  tokens.hpp
src/: LexicalAnalysis.cpp  SyntaxAnalysis.cpp  lexer.l  main.cpp
src/lexer/: lexer.l
tests/: CMakeLists.txt  lexer_test.cpp  parser_test.cpp
